<resources>
    <string name="app_name">Attendancer</string>
    <string name="app_name_en">Attendancer</string>
    <string name="app_login_str">Login</string>
    <string name="app_login_name">Name</string>
    <string name="app_login_passwd">Password</string>
    <string name="login_name_hint">Login Name</string>
    <string name="login_password_hint">Login Password</string>
    <string name="login_passwordcon_hint">Confirm your Pasword</string>
    <string name="app_login_button">sign in</string>
    <string name="app_signup_button">Sign up</string>
    <string name="title_activity_real_main">RealMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
</resources>
